<resources>
    <string name="app_name">Injetics</string>
    <string name="app_title">Injetics</string>
    <string name="title_placeholder">Title</string>
    <string name="description_placeholder">Placeholder for description</string>
    <string name="safety_title">Safety Rule Of Operation Of Injection Molding Machine</string>
    <string name="gate_seal_title">Gate-Seal Testing Done Right</string>
    <string name="gate_seal_text"><i>Written by John Bozzelli, Founder of Injection Molding Solutions</i>\n\n
        With Scientific Molding, two stages are used to form the part: First stage is for getting most of the plastic into the part, normally 90% to 99.9% full by volume. Second stage packs the part to mimic the steel cavity texture and shape. Optimizing the second stage—also referred to as pack and hold—involves moving relatively little plastic into the cavity, but it’s critically important for surface finish, cosmetics, and part dimensions.\n\n
        Let’s focus on the second parameter: gate sealed (frozen) or unsealed (unfrozen). Most of us were taught to always run with the gate sealed so as not to let any plastic backflow out of the gate. Gate seal does provide an easier process to run, but do not make this decision based on what you like,  but on what is best for the part. Part performance requirements overrule.\n\n
        Maybe you can tell which way to go by looking at the part, gate, or runner—but I can’t. It’s a complicated question and I gave up guessing years ago. The area around the gate often has drastically different physical and chemical properties, due to being highly stressed. It should not see high loads, flexing, or impact. It is important that the mold maker understand the function of the part for proper gate location in the mold design.\n\n
        How do you get the part to tell you what it likes best? The answer is to do the gate-seal experiment and then test parts made with and without gate seal. The data will tell you what is needed and will allow you to make better parts. This will save you time and money by eliminating one variable/factor in your design of experiments (DOE). Heck, it might even prevent a product recall. The whole concept behind Scientific Molding is to find an experiment that tells you what is best for the part and process. The gate-seal test isn’t hard to do, but like many molding issues, you need to sweat the details.\n\n
        Here is my guideline for the procedure. It may have to be modified to suit your application.\n\n
        <b>1. </b>Check that timers are functioning correctly and that they span the appropriate time for the part.\n\n
        <b>2. </b> Make sure you have a cushion and will not bottom the screw (the check valve should not leak).\n\n
        <b>3. </b>Make sure that the part is not being filled or packed during screw rotate or plastication if you have to run with a long screw delay before screw rotation.\n\n
        <b>4. </b>Note overall cycle time, average screw rotate or recovery time, and total pack and hold (second-stage) time.\n\n
        <b>5. </b>Find the sum of second-stage time and cooling or mold-closed time. The minimum cooling or mold closed time should be a little longer than the actual screw rotate or recovery time. Example: Existing pack and hold timer(s) at 7 sec. If the cooling timer is set for 20 sec and the screw rotate time is 12 sec, the total for second-stage and cooling is 27 sec. Next, in this example, set the cooling or mold closed timer to 26.8 sec and the second-stage timer 0.2 sec. The minimum cooling time will be 13 sec, as it takes 12 sec to charge the shot, and you do not want cycle time to be dependent on screw recovery.\n\n
        We’ll show how to get to that minimum cooling time in subsequent steps. Note: Cycle time should not change during this experiment, unless you have a very long gate-seal time—in this case, more than 14 sec. \n\n
        <b>6. </b>With the second-stage timer at 0.2 sec and the cooling timer at 26.8 sec, get the process on cycle. Cycle time should be constant. Note that the sum of the cure timer and pack and hold timer(s) will always equal 27 sec (in this example).\n\n
        <b>7. </b>Did the cycle time change from the normal cycle time after your adjustments? If so, redo the steps above. Cycle time should not change during the experiment, except for the one or two shots made as you change timer settings.\n\n
        <b>8. </b>Set up pack/hold pressure to a nominal value by starting low and raising hold pressure until the part “looks” acceptable. Most likely this is not the pressure that will be used to make production parts; it is only for this experiment. Do not use any bogus rules like, “Hold or second-stage pressure should be 50% of fill pressure.”\n\n
        <b>9. </b>Once the machine is at steady-state, take two sample shots. Cut the runner off if it has a cold runner and label both runner and part with the hold time. If it must be clipped off, do it identically for all samples. For multi-cavity tools, it is your choice to sample cavities individually—which I recommend if you suspect different cavity temperatures or different gate sizes—or all cavities together. I tend to sample all cavities together unless there are reasons to suspect a problem.\n\n
        <b>10. </b>Remove 1-2 sec from the cooling timer and add the same 1-2 sec to the second-stage timer. The time intervals you use should be appropriate for the part. Again take two samples and write the new second-stage time on each set of parts and runner (if any).\n\n
        <b>11. </b>Repeat step 10 until the part weight does not increase (for cold runners) or increases only slightly (for hot runners). Cycle time should be unchanged throughout the study. However if you still do not have gate seal—that is, the part(s) stopped increasing in weight—continue to add hold time, extending the cycle slightly.\n\n
        <b>12. </b>Verify the mold is not being packed out during screw recovery  from backpressure (called intrusion). Weigh parts with and without screw recovery at the shortest pack and hold time. In our example, this would be 0.2 sec.\n\n
        <b>13. </b>Weigh the parts and runners separately, then plot part weight vs. pack and hold (second-stage) time. Make sure you use an appropriate scale. For example:\n\n
    </string>
    <string name="gate_seal_text_cont">
        <b>14. </b>Find the second-stage time at which the parts stop gaining weight or start to get lighter. Variation in the last digit of the scale reading is not significant. For example if the part weighs 22.55 g, the part weight must change by 0.1 g to be considered a significant weight change. This time is the gate freeze time. For example:\n\n
    </string>
    <string name="gate_seal_text_conclusion">
        <b>15. </b>This example shows a gate-freeze time of about 4 sec. This is not where you should set the pack-and-hold or second-stage timer(s). In fact it would be the worst possible choice, as typical temperature and process variations would result in some parts with the gate sealed and some parts with the gate unsealed. It’s critically important to make two sets of parts for testing: One set with gate unfrozen, say at 2 sec of second-stage time and another set made at gate freeze plus 2 sec (in this case, 6 sec).\n\n
        Thoroughly test both part sets for performance, not size. Set hold time to provide gate freeze or unfreeze, whichever provides the best performance. If you can run with gate freeze, you must be conservative and set second-stage timer(s) to 5 or 6 sec (for this example) to ensure the gate is frozen with normal process-temperature variances.\n\n
        Remember some parts will run best without gate freeze. If you run with gate unfrozen, the process must run at a consistent cycle time; manual cycles are unacceptable.\n\n
        <b>16. </b>Now plot the weight of the runner vs. hold time to make sure the runner is not freezing before the gate does. If the runner freezes before the gate, you may not be able to pack out the part properly.\n\n
        Caution: If different melt or mold temperatures, gate sizes, backpressure, screw speeds, and significantly higher hold pressure or cycle times are implemented, a new gate-seal study must be done. Also, make sure you always have a cushion. With long hold times, the screw can move forward if the check valve leaks.\n\n
        Bottom line, let the part decide what is best, get data, and study it. There is too much at stake to go with opinions or rules based on myth.\n\n
    </string>
    <string name="gate_seal_credits">Article accessed from https://www.ptonline.com/articles/injection-molding-gate-seal-testing-done-right-\n
        © 2021 Gardner Business Media, Inc.
    </string>
    <string name="defects_heading">Injection Molding Defects</string>
    <string name="defects_title"><b>Cosmetic injection molding defects</b>\n</string>
    <string name="defects_cosmetic">Cosmetic challenges generally do not affect the structural integrity of a part. However, they do affect the part’s aesthetics.\n\n</string>
    <string name="defects_splay"><b>Splay</b>\n Splay is a common cosmetic defect that comes in the form of silver / white streaks on a part’s surface.\n\n</string>
    <string name="defects_flow"><b>Flow lines</b>\n Flow lines are streaks, patterns, circular ripples or lines that occur on the surface of a part.\n\n</string>
    <string name="defects_weld"><b>Weld lines (knit lines)</b>\n Weld lines form on the surface of a part where two flow fronts meet. They tend to be the weakest point on a part since the two fronts were unable to “knit” back together properly.\n\n</string>
    <string name="defects_flash"><b>Flash</b>\n Flash takes on the form of thin plastic layers that have hardened outside of where the mold’s two halves (Part A and Part B) meet. You should fix flash immediately because it will damage your tool if it occurs over several cycles.\n\n</string>
    <string name="defects_structural"><b>Structural Defects</b>\n</string>
    <string name="defects_structural_desc">Unlike cosmetic challenges, structural challenges can seriously compromise the integrity of a part and render them unusable.\n\n</string>
    <string name="defects_jetting"><b>Jetting</b>\n Jetting comes in the form of a buckled, “snakelike” stream. It can lead to part weakness and internal defects.\n\n</string>
    <string name="defects_sink"><b>Sink marks</b>\n Sink marks result from shrinkage in the thicker sections of a mold and appear as depressions on the part.\n\n</string>
    <string name="defects_vacuum"><b>Vacuum voids</b>\n Vacuum voids are bubbles within a part that can weaken its integrity. They result from trapped air or differential shrinking.\n\n</string>
    <string name="defects_short"><b>Short shots</b>\n Short shots occur fairly often during a first run. As their name suggests, they are areas of the part where the plastic material has come short, leaving missing elements in the final part. They can also be an extension of flow lines and knit lines.\n\n</string>
    <string name="defects_warp"><b>Warping</b>\n Warping is a dimensional deformation that results from uneven plastic shrinkage. Semi-crystallines are more likely to warp since they have specific cooling times. Note that glass-filled materials have a tendency to warp more than unfilled materials.\n\n</string>
    <string name="defects_burn"><b>Burn marks</b>\n As the name suggests, burn marks are literally burns that occur on the surface of a part. They generally appear in blind pockets or at the end of the flow path.\n\n</string>
    <string name="defects_delam"><b>Surface delamination</b>\n Surface delaminations are flake-like layers on a part’s surface that can reduce its strength.\n\n</string>
    <string name="defects_credits">Examples accessed from https://eirmed-devices.com/overcoming-common-medical-injection-molding-challenges/\n © 2021 - EirMed™</string>
</resources>